cthulhu_tests/tests/compile-fails/not_a_funtion.rs
#[cthulhu::invoke]
struct Foo {}

#[cthulhu::invoke]
enum Foo {}

#[cthulhu::invoke]
union Foo {}

fn main() {}
